Add API for puzzle_show
- puzzle_show_push_ques
- puzzle_show_push_answ
- puzzle_show_push_chatmessage

--- a/templates/base.html
+++ b/templates/base.html
@@ -126,7 +126,7 @@
                     <img src="{% static 'img/navi1-lobby.png' %}" class="img-responsive" alt=""/></div>
                   -->
                   <div class="pcNone navibox l">
-                    <a href='{% url 'mondai' %}'><img src="{% static 'img/navi2-mondai.png' %}" class="img-responsive" alt=""/></a></div>
+                    <a href='{% url 'open:mondai' %}'><img src="{% static 'img/navi2-mondai.png' %}" class="img-responsive" alt=""/></a></div>
                   <!--
                   <div class="pcNone navibox l">
                     <img src="{% static 'img/navi3-rule.png' %}" class="img-responsive" alt=""/></div>
