--- a/templates/mondai/index.html
+++ b/templates/mondai/index.html
@@ -11,12 +11,12 @@
   <div class="subnavi2">
     問題一覧
   </div>
-  <!--
   <div class="subnavi">
-    <a href="/mondai/add">
+    <a href="/puzzle/add">
       出題する
     </a>
   </div>
+  <!--
   <div class="subnavi">
     <a href="/mondai/tag_search">
       タグ一覧
