--- a/static/css/import.css
+++ b/static/css/import.css
@@ -1564,3 +1564,9 @@ input[type="submit"].bookmark {
   background-color: #fff;
   box-shadow: 0px 0px 3px #000;
 }
+
+.postForm {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
